--- a/package.json
+++ b/package.json
@@ -32,9 +32,13 @@
   "devDependencies": {
     "@11ty/eleventy": "^0.12.1",
     "@11ty/eleventy-navigation": "^0.3.2",
+    "@11ty/eleventy-plugin-rss": "^1.1.1",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.2",
     "concurrently": "^6.2.1",
     "js-yaml": "^3.14.1",
     "luxon": "^1.28.0",
+    "markdown-it": "^10.0.0",
+    "markdown-it-anchor": "^8.3.0",
     "node-sass": "^6.0.1",
     "rerun-script": "^0.6.0"
   }
