--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "sass": "node-sass _site/scss -o _site/css",
     "sass:watch": "npm run sass && npm run sass -- --watch --recursive",
     "dev": "rerun-script",
-    "surge": "surge --domain=ansys.surge.sh --project=dist"
+    "surge": "suurge --domain=ansys.surge.sh --project=dist"
   },
   "repository": {
     "type": "git",
