--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "luxon": "^1.28.0",
     "markdown-it": "^10.0.0",
     "markdown-it-anchor": "^8.3.0",
+    "markdown-it-for-inline": "^0.1.1",
     "node-sass": "^6.0.1",
     "rerun-script": "^0.6.0"
   }
